# local-dictation-app

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  NOTICE  README.md  clippy.toml  rust-toolchain.toml
.github/workflows/: build-mac.yml
app/: .eslintrc.cjs  .prettierrc.json  forge.config.ts  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.renderer.config.ts
app/src/: main.ts  preload.ts  sidecar.test.ts  sidecar.ts
app/src/renderer/: App.svelte  main.ts
crates/inference-core/: Cargo.toml
crates/inference-core/src/: audio.rs  backend.rs  main.rs  server.rs  stub.rs  whisper.rs  wire.rs
crates/inference-core/tests/: integration.rs
crates/lda-cli/: Cargo.toml
crates/lda-cli/src/: main.rs
crates/lda-cli/tests/: smoke.rs
docs/specs/: 2026-05-15-architecture-design.md  2026-05-15-m0-foundation-design.md
