[package]
name = "inference-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "time", "sync"] }
axum = "0.8"
hyper = { version = "1.5", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
async-trait = "0.1"
thiserror = "2"
hound = "3"
rubato = "0.16"
# whisper-rs 0.16 dropped the `accelerate` feature (now baked in for arm64 builds).
# On macOS arm64 we use metal + coreml. accelerate is no longer a selectable feature.
whisper-rs = { version = "0.16", features = ["metal", "coreml"] }

[dev-dependencies]
tempfile = "3"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "http1"] }
http-body-util = "0.1"
hyperlocal = "0.9"
libc = "0.2"
